# Final-Web-Project

./: .gitignore  README.md  crawl_data.py  index.html  main.py  pyproject.toml  requirements.txt  winmart_items.json  winmart_items_merged.json
AdminSite/CSS/: contact.css  favorites.css  invoice.css  orderlist.css  products.css  promotion.css  setting.css
AdminSite/HTML/: favorites.html  inbox.html  invoice.html  setting.html
Assets/CSS/: blog-page.css  external.css  order-details.css  (+4 more)
ClientSite/: about.html  blog-page.html  blog1.html  blog2.html  blog3.html  checkout-shipping.html  contact-us.html  faq.html  index.html  my-account.html  order-confirmation.html  order-details.html  product details.html  product-details.html  review-modal.html  shop grid.html  shop list.html  shop-grid.html  shopping-cart.html  terms-services.html
Final-Web-Project-main/: index.html  requirements.txt
Home/: cart-manager.js  home.css  home.html  home.js
about/: about.css
blog page/: blog page.html
checkout-shipping/: index.html  style.css
contact-us/: index.html  style.css
mongodb/: create_collection.py  test_mongodb.py  test_mongodb_alt.py
my account/: my account.css  my account.html
order-confirmation/: index.html  style.css
order-details/: index.html
product details/: product details.css  product details.html
review-modal/: index.html
shared/: footer.html  header.html
shop grid/: shop grid.css  shop grid.html
shop list/: shop list.css
shopping-cart/: index.html
single blog/: single blog.css  single blog.html
terms-services/: index.html
(+160 files in other folders)
