[project]
name = "final-web-project-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "bleach>=6.3.0",
    "certifi>=2025.10.5",
    "dill>=0.4.0",
    "fastapi>=0.121.0",
    "matplotlib>=3.10.7",
    "motor>=3.7.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pyaml>=25.7.0",
    "pymongo>=4.15.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.38.0",
]
